--- a/locales/ar.json
+++ b/locales/ar.json
@@ -5,16 +5,16 @@
   "ui:obsolete": "أساسي",
 
   "advice:empty-class": " غير متوفر[class]",
-  "advice:empty-id": "رقم التعريف غير متوفر [id]",
-  "advice:main": "استخدام ثاني لإظافة محتوى  <main>",
-  "advice:figcaption": "شرح او توضيح للشكل الثاني <figcaption>",
+  "advice:empty-id": "رقم التعريف غير متوفر ",
+  "advice:main": "استخدام ثاني لإظافة محتوى",
+  "advice:figcaption": "شرح او توضيح للشكل الثاني",
   "advice:figcaption-order": "طلب خاطئ ل <figcaption>",
   "advice:target-blank": "رابط لفتح شريط بحث جديد",
   "advice:mailto": "هل هذا الاميل صحيح؟",
   "advice:tel": "هل رقم الهاتف صحيح؟",
   "advice:role-button": "[role=button] زر قابل للنقر على الرابط",
   "advice:file-format": "هل حجم وتنسيق الملف معروض؟",
-  "advice:duplicate-roles": "ثاني للعنصر attr(role) دور",
+  "advice:duplicate-roles": "ثاني للعنصردور",
   "advice:missing-role": "[role=search] هل وظيفة البحث عرفت؟",
   "advice:required": "[required] field: هذا الحقل واضح؟انه مطلوب",
   "advice:hidden": "عنصر مخفي",
@@ -70,10 +70,10 @@
   "error:role-scrollbar": "عناصر مفقوده في [role=scrollbar]",
   "error:nested-interactive": "عناصر التفاعل متداخله",
 
-  "warning:style-attr": "تنسيقات النسق",
+  "warning:style-attr": "تنسيقات التصميم",
   "warning:invalid-nesting": "تداخل غير صحيح",
-  "warning:invalid-list-nesting": "قائمه متداخله غير صحيحه <li>",
-  "warning:invalid-def": "<dd> ترتيب غير صحيح",
+  "warning:invalid-list-nesting": "قائمه متداخله غير صحيحه",
+  "warning:invalid-def": "ترتيب غير صحيح",
   "warning:invalid-def-nesting": "غير صحيح <dl> طفل",
   "warning:invalid-figcaption-nesting": "<figcaption> شرح توضيحي خارج الشكل <figure>",
   "warning:figure-role": "<figure> شكل من غير دور [role=group]",
@@ -102,7 +102,7 @@
   "warning:empty-href": "[href=attr(href)]مصدر بديل غير موجود",
   "warning:href-js": "[href] بداية للجافا سكريبت:",
   "warning:nested-table": "جداول متداخله <table>s",
-  "warning:unsecured-target": "الهدف غيرامن [target]",
+  "warning:unsecured-target": "الهدف غيرأمن [target]",
   "warning:filename-alt": "إسم ملف بديل [alt]",
   "warning:no-aria-level": "لا [aria-level]",
 
